[package]
name = "starknet-event-query"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
eyre = "0.6.12"
glob = "0.3.2"
pretty_assertions_sorted = "1.2.3"
regex = "1.11.1"
serde_json = "1.0.140"
starknet = "0.15.1"
tempfile = "3.19.1"
time = { version = "0.3.41", features = ["parsing"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "time"] }

